--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"@tanstack/react-devtools": "^0.7.0",
 		"@tanstack/react-query": "^5.66.5",
 		"@tanstack/react-query-devtools": "^5.66.5",
+		"@tanstack/react-query-persist-client": "^5.66.5",
+		"dexie": "^4.0.11",
 		"@tanstack/react-router": "^1.132.0",
 		"@tanstack/react-router-devtools": "^1.132.0",
 		"@tanstack/router-plugin": "^1.132.0",
