--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,13 @@
 VITE_CONSTRUCTION_DISABLED=
 VITE_API_BASE_URL=
+
+# Optional: enable persistence (offline outbox) in dev for testing reload-after-offline
+# VITE_PERSIST_OFFLINE=true
+
+# Optional
+# VITE_QUERY_CACHE_MAX_AGE_HOURS=
+# VITE_QUERY_CACHE_GC_TIME_MS=
+# VITE_QUERY_CACHE_STALE_TIME_MS=
+
+# Optional: TTL for synced mutation rows in IndexedDB, ms (default: 7 days)
+# VITE_MUTATION_OUTBOX_MAX_AGE_DAYS=
