--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
 		"@tanstack/react-query": "^5.66.5",
 		"@tanstack/react-query-devtools": "^5.66.5",
 		"@tanstack/react-query-persist-client": "^5.66.5",
-		"dexie": "^4.0.11",
 		"@tanstack/react-router": "^1.132.0",
 		"@tanstack/react-router-devtools": "^1.132.0",
 		"@tanstack/router-plugin": "^1.132.0",
+		"axios": "^1.13.4",
 		"class-variance-authority": "^0.7.1",
+		"dexie": "^4.0.11",
 		"lucide-react": "^0.561.0",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
@@ -29,19 +30,19 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/vite": "^4.0.6",
-		"tw-animate-css": "^1.4.0",
+		"@tanstack/devtools-vite": "^0.3.11",
 		"@tanstack/eslint-config": "^0.3.0",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/react": "^16.2.0",
-		"@tanstack/devtools-vite": "^0.3.11",
 		"@types/node": "^22.10.2",
 		"@types/react": "^19.2.0",
 		"@types/react-dom": "^19.2.0",
 		"@vitejs/plugin-react": "^5.0.4",
 		"jsdom": "^27.0.0",
 		"prettier": "^3.5.3",
-		"typescript": "^5.7.2",
 		"tailwindcss": "^4.1.17",
+		"tw-animate-css": "^1.4.0",
+		"typescript": "^5.7.2",
 		"vite": "^7.1.7",
 		"vitest": "^3.0.5",
 		"web-vitals": "^5.1.0"
