--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
 		"class-variance-authority": "^0.7.1",
 		"dexie": "^4.0.11",
 		"lucide-react": "^0.561.0",
+		"radix-ui": "^1.4.3",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
+		"sonner": "^2.0.7",
+		"uuid": "^13.0.0",
 		"vite-tsconfig-paths": "^6.0.2"
 	},
 	"devDependencies": {
