--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@abumble/design-system": "^0.0.26",
+		"@tailwindcss/typography": "^0.5.19",
 		"@tanstack/react-devtools": "^0.7.0",
 		"@tanstack/react-query": "^5.66.5",
 		"@tanstack/react-query-devtools": "^5.66.5",
@@ -27,6 +28,7 @@
 		"radix-ui": "^1.4.3",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
+		"react-markdown": "^10.1.0",
 		"sonner": "^2.0.7",
 		"uuid": "^13.0.0",
 		"vite-tsconfig-paths": "^6.0.2"
