updated registration + dev mode pages

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,10 @@
 {
-	"name": "Prop Manager UI",
+	"name": "PropMange UI",
 	"image": "mcr.microsoft.com/devcontainers/javascript-node:1-22-bookworm",
 	"features": {
 		"ghcr.io/devcontainers/features/pnpm:2": {}
 	},
-	"forwardPorts": [
-		3000
-	],
+	"forwardPorts": [3000],
 	"portsAttributes": {
 		"3000": {
 			"label": "Vite dev server",
