improved unit display

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ VITE_API_BASE_URL=
 
 # Optional: TTL for synced mutation rows in IndexedDB, ms (default: 7 days)
 # VITE_MUTATION_OUTBOX_MAX_AGE_DAYS=
+
+# Optional: delay (ms) before showing skeleton/spinner; avoids flash on fast loads (default: 250)
+# VITE_LOADING_FALLBACK_DELAY_MS=
