replaced template form with wizard

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,7 @@
 {
 	"name": "PropManage UI",
 	"image": "mcr.microsoft.com/devcontainers/javascript-node:20-bookworm",
-	"forwardPorts": [
-		3000
-	],
+	"forwardPorts": [3000],
 	"portsAttributes": {
 		"3000": {
 			"label": "Vite dev server",
