--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@tanstack/router-plugin": "^1.162.9",
 		"axios": "^1.13.5",
 		"class-variance-authority": "^0.7.1",
+		"cmdk": "^1.1.1",
 		"dexie": "^4.3.0",
 		"lucide-react": "^0.561.0",
 		"radix-ui": "^1.4.3",
